Footer gap added in Stopwatch and To-Do List

--- a/projects/Stopwatch/style.css
+++ b/projects/Stopwatch/style.css
@@ -113,6 +113,10 @@ h1 {
     background-color: #676767;
 }
 
+.footer-gap {
+    height: 100px;
+}
+
 @media (orientation: landscape) {
     .laps-display {
         max-height: 30vh; /* smaller so it fits in landscape */
